# drift-sync

./: .gitignore  README.md  READMEME.md  main.py  minimal_integration_example.py  plan.txt  pyproject.toml  quiver  real_world_sailing_system.py
core/: polar.py  sailboat.py  wind.py
data/: environment_data.py  real-world-data-plan.txt
data_scraper/: test_geo_scrape.py  wind_api_integration.py
geography/: geo.py
nav/: basic_controller.py  old.py  path_finder.py  rl_plan.py  rudder_control_env.py  sailing_path_calculator.py
nav/rl/: agent.py  env.py  train.py
viz/: plotter.py
