[project]
name = "drift-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "geopandas>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "shapely>=2.1.1",
]
